--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ pycodestyle==2.12.1
 pydocstyle==6.3.0
 pyflakes==3.2.0
 pylint==4.0.5
+python-lsp-black==2.0.0
 python-lsp-jsonrpc==1.1.2
 python-lsp-server==1.14.0
 pytokens==0.4.1
