--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ docstring-to-markdown==0.17
 flake8==7.1.2
 importlib_metadata==8.7.1
 isort==8.0.0
+isoweek==1.3.3
 jedi==0.19.2
 mccabe==0.7.0
 mypy_extensions==1.1.0
@@ -36,3 +37,5 @@ ujson==5.11.0
 whatthepatch==1.0.7
 yapf==0.43.0
 zipp==3.23.0
+django-htmx>=1.17
+Pillow>=10.0          # for future photo attachments
