--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ black==26.1.0
 click==8.3.1
 dill==0.4.1
 Django==6.0.2
+django-htmx==1.27.0
 docstring-to-markdown==0.17
 flake8==7.1.2
 importlib_metadata==8.7.1
@@ -16,6 +17,7 @@ mypy_extensions==1.1.0
 packaging==26.0
 parso==0.8.6
 pathspec==1.0.4
+pillow==12.1.1
 platformdirs==4.9.2
 pluggy==1.6.0
 psycopg2==2.9.11
@@ -37,5 +39,3 @@ ujson==5.11.0
 whatthepatch==1.0.7
 yapf==0.43.0
 zipp==3.23.0
-django-htmx>=1.17
-Pillow>=10.0          # for future photo attachments
